<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basesNumericas"
            android:icon="@drawable/ic_numeric_base"
            android:title="@string/menu_BaseNumerica" />
        <item
            android:id="@+id/nav_ipv4"
            android:icon="@drawable/ic_redes"
            android:title="@string/rede_ipv4" />
        <item
            android:id="@+id/nav_ipv6"
            android:icon="@drawable/ic_redes"
            android:title="@string/rede_ipv6" />
        <item
            android:id="@+id/nav_validador_logica"
            android:icon="@drawable/ic_validador_expressoes_logicas"
            android:title="@string/menu_validador_logica" />
    </group>
</menu>