<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_basesNumericas">

    <fragment
        android:id="@+id/nav_basesNumericas"
        android:name="com.example.permutabittools.ui.basesNumericasFragments.BaseNumericaFragment"
        android:label="@string/menu_BaseNumerica"
        tools:layout="@layout/fragment_basenumerica">

        <action
            android:id="@+id/action_nav_basesNumericas_to_nav_calculoBasesNumericas"
            app:destination="@id/nav_calculoBasesNumericas"/>

    </fragment>

    <fragment
        android:id="@+id/nav_ipv4"
        android:name="com.example.permutabittools.ui.Ipv4Fragments.MascaraRedesIPv4Fragment"
        android:label="@string/rede_ipv4"
        tools:layout="@layout/fragment_mascara_de_rede_ipv4" />

    <fragment
        android:id="@+id/nav_ipv6"
        android:name="com.example.permutabittools.ui.MascaraDeRedesIpv6Fragment"
        android:label="@string/rede_ipv6"
        tools:layout="@layout/fragment_mascara_de_rede_ipv6" />

    <fragment
        android:id="@+id/nav_validador_logica"
        android:name="com.example.permutabittools.ui.ValidadorExpressoesLogicasFragment"
        android:label="@string/menu_validador_logica"
        tools:layout="@layout/fragment_validador_logica" />

    <fragment
        android:id="@+id/nav_calculoBasesNumericas"
        android:name="com.example.permutabittools.ui.basesNumericasFragments.CalculoBaseNumericaFragment"
        android:label="@string/menu_CalculoBaseNumerica"
        tools:layout="@layout/fragment_calculo_base_numerica"/>
</navigation>